--- a/configs/preprocess_config.yaml
+++ b/configs/preprocess_config.yaml
@@ -1,8 +1,8 @@
-video_path: data/locomotive
-save_dir: data/locomotive/ddim_latents
+video_path: data/inputs
+save_dir: data/ddim_latents
 max_number_of_frames: 24
 
 n_timesteps: 999
 prompt: Amazing quality, masterpiece, A locomotive rides in a forest
-negative_prompt: ""
+negative_prompt: ''
 save_ddim_reconstruction: False
